updated week 2 with all progress

--- a/updates/index.html
+++ b/updates/index.html
@@ -45,7 +45,7 @@
         <div class="card">
           <h5 class="card-header">Week 2</h5>
           <div class="card-body">
-            <p class="card-text">I implemented 1-Wire over UART and can communicate with the DS18B20 sensor.</p>
+            <p class="card-text">I implemented 1-Wire over UART and can communicate with the DS18B20 sensor. I tested a BluetoothLE module and it works very reliably for communication with my phone. The project now uses UART interrupt for communication and has all the basic features except temperature control logic and status display.</p>
           </div>
         </div>
       </main>
