Added 03/12 progress and updated parts with current setup

--- a/parts/index.html
+++ b/parts/index.html
@@ -33,7 +33,7 @@
         <div class="card">
           <h5 class="card-header">Microcontroller</h5>
           <div class="card-body">
-            <h5 class="card-title">STM32 NUCLEO-L476RG</h5>
+            <h5 class="card-title">STMicroelectronics STM32 NUCLEO-L476RG</h5>
             <p class="card-text">Controls all the peripherals.</p>
             <a href="https://www.st.com/resource/en/datasheet/stm32l476rg.pdf" class="btn btn-primary">Datasheet</a>
           </div>
@@ -41,28 +41,28 @@
         <div class="card">
           <h5 class="card-header">Temperature Sensor</h5>
           <div class="card-body">
-            <h5 class="card-title">SHT20 I2C Temperature &amp; Humidity Sensor (Waterproof Probe)</h5>
-            <h6 class="card-subtitle">Protocol: I²C</h6>
+            <h5 class="card-title">Adafruit High Temp Waterproof DS18B20 Digital Temperature Sensor</h5>
+            <h6 class="card-subtitle">Protocol: 1-Wire through half duplex UART</h6>
             <p class="card-text">Checks the water temperature.</p>
-            <a href="https://www.micro-semiconductor.com/datasheet/67-SEN0227.pdf" class="btn btn-primary">Datasheet</a>
+            <a href="https://datasheets.maximintegrated.com/en/ds/DS18B20.pdf" class="btn btn-primary">Datasheet</a>
           </div>
         </div>
         <div class="card">
           <h5 class="card-header">Display</h5>
           <div class="card-body">
             <h5 class="card-title">SunFounder I2C LCD2004</h5>
-            <h6 class="card-subtitle">Protocol: I²C</h6>
-            <p class="card-text">Displays status and messages.</p>
+            <h6 class="card-subtitle">Protocol: I<sup>2</sup>C</h6>
+            <p class="card-text">Displays status.</p>
             <a href="http://wiki.sunfounder.cc/index.php?title=I2C_LCD2004" class="btn btn-primary">Specifications</a>
           </div>
         </div>
         <div class="card">
           <h5 class="card-header">Bluetooth</h5>
           <div class="card-body">
-            <h5 class="card-title">HiLetGo HC-05 Bluetooth Transceiver</h5>
+            <h5 class="card-title">HiLetGo AT-09 Bluetooth Transceiver (HM-10)</h5>
             <h6 class="card-subtitle">Protocol: UART</h6>
             <p class="card-text">Sends and receives messages.</p>
-            <a href="https://components101.com/sites/default/files/component_datasheet/HC-05%20Datasheet.pdf" class="btn btn-primary">Datasheet</a>
+            <a href="http://wiki.sunfounder.cc/images/f/f8/Bluetooth_4.0_BLE_module_datasheet.pdf" class="btn btn-primary">Datasheet</a>
           </div>
         </div>
         <div class="card">
