--- a/updates/index.html
+++ b/updates/index.html
@@ -54,6 +54,12 @@
             <p class="card-text">I still don't have the I2C display quite working, but I tested it using Arduino and also STM32 Nucleo with <a href="https://community.st.com/s/question/0D50X00009sUBHFSA4/enpresentationstm32i2clcdhd44780v2">code from a French University</a>. I just need to translate the HAL code to register level code like I did for the temperature sensor. Then I need to finish implementing the PID controller and calibrating it.</p>
           </div>
         </div>
+        <div class="card">
+          <h5 class="card-header">Week 3 Weekend</h5>
+          <div class="card-body">
+            <p class="card-text">Everything is now functional, but I didn't test my program too deeply. LCD displays program status. There is a simple PID that uses hardcoded values of 2, 5, 1 for coefficients of P, I, and D respectively to control the temperature.</p>
+          </div>
+        </div>
       </main>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
