updated homepage with demo video and updated diagram

--- a/index.html
+++ b/index.html
@@ -33,10 +33,15 @@
         <h1>SVM32</h1>
         <p class="fs-4">Creating a sous vide machine (immersion circulator) using an STM32 microcontroller.</p>
         <h2>Overview</h2>
-        <p class="fs-5">We aim to create a <a href="https://www.seriouseats.com/first-thing-to-cook-with-sous-vide-immersion-circulator-essential-recipes">sous vide circulator</a> that can be used for cooking food. We will attempt to replicate most of the features of a retail machine.</h2>
+        <p class="fs-5"><a href="https://www.seriouseats.com/first-thing-to-cook-with-sous-vide-immersion-circulator-essential-recipes">Sous vide circulators</a> can be used for cooking food more precisely through low temperature long time cooking. I have attempted to replicate many of the features of a retail machine that you can buy in store/online.</p>
+        <h2>Sous Vide Demonstration with a Steak</h2>
+        <div class="ratio ratio-16x9">
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/1_TRxJ802UY" allowfullscreen></iframe>
+        </div>
+        <h2>Features</h2>
         <ul>
           <li>Control tempterature and duration</li>
-          <li>Display current tempterature and remaining time.</li>
+          <li>Display current temperature and remaining time.</li>
           <li>Control settings wirelessly through Bluetooth.</li>
         </ul>
         <h2>Team Members</h2>
@@ -45,7 +50,9 @@
         <p class="fs-5">Proposed design with peripherals and communication protocols.</p>
         <img src="images/diagram.png" class="img-fluid" alt="SVM32 Block Diagram" loading="lazy"/>
         <h2>Demo Video</h2>
-        <p class="fs-5">This project is still a work in progress. A demo video will be available upon completion.</p>
+        <div class="ratio ratio-16x9">
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/pQRGl5neAPU" allowfullscreen></iframe>
+        </div>
         <p class="fs-6">For more information, check out the <a href="parts/">parts</a> page and <a href="updates/">updates</a> page</p>
       </main>
     </div>
