update youtube link with new video demo

--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
         <img src="images/diagram.png" class="img-fluid" alt="SVM32 Block Diagram" loading="lazy"/>
         <h2>Demo Video</h2>
         <div class="ratio ratio-16x9">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/pQRGl5neAPU" allowfullscreen></iframe>
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/BRbTP0dnTFo" allowfullscreen></iframe>
         </div>
+        <p class="fs-5">In this version, I forget to write over old text when updating the screen resulting in things like 'Restshed' instead of 'Rest' because 'Finished' is leftover. This is fixed on the latest version at <a href="https://github.com/TranNicholas/svm32">TranNicholas/svm32</a>.</p>
         <p class="fs-6">For more information, check out the <a href="parts/">parts</a> page and <a href="updates/">updates</a> page</p>
       </main>
     </div>
