update updates to have the correct title for week 4

--- a/updates/index.html
+++ b/updates/index.html
@@ -55,9 +55,9 @@
           </div>
         </div>
         <div class="card">
-          <h5 class="card-header">Week 3 Weekend</h5>
+          <h5 class="card-header">Week 4</h5>
           <div class="card-body">
-            <p class="card-text">Everything is now functional, but I didn't test my program too deeply. LCD displays program status. There is a simple PID that uses hardcoded values of 2, 5, 1 for coefficients of P, I, and D respectively to control the temperature.</p>
+            <p class="card-text">Everything is now functional, but I didn't test the program too deeply. LCD displays program status. There is a simple PID that uses hardcoded values of 2, 5, 1 for coefficients of P, I, and D respectively to control the temperature. The demo video is now available on the home page.</p>
           </div>
         </div>
       </main>
